create basic layout of form

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
             border: solid white 2px;
             border-radius: 10px;
             transform: translateY(-100px);
+            font-size: 20px;
         }
     </style>
 </head>
@@ -54,10 +55,43 @@
                 <label for="longitude">Enter your longitude</label>
                 <br>
                 <input type="range" name="longitude" id="">
-
-                <label for="longitude">Enter your longitude</label>
                 <br>
-                <input type="range" name="longitude" id="">
+
+                <label for="latitude">Enter your latitude</label>
+                <br>
+                <input type="range" name="latitude" id="">
+                <br>
+
+                <label for="age">Enter your house age</label>
+                <br>
+                <input type="range" name="age" id="">
+                <br>
+
+                <label for="population">Enter average population of the area</label>
+                <br>
+                <input type="number" name="" id="">
+                <br>
+
+                <label for="households">Enter average number of households of the area</label>
+                <br>
+                <input type="number" name="" id="">
+                <br>
+
+                <label for="income">Enter your income</label>
+                <br>
+                <input type="number" name="" id="">
+                <br>
+
+                <label for="proximity">Enter proximity to ocean</label>
+                <br>
+                <select name="proximity" id="">
+                    <option value="less_than_1_hour">
+                        <1H OCEAN</option>
+                    <option value="inland">INLAND</option>
+                    <option value="near_ocean">NEAR OCEAN</option>
+                    <option value="near_bay">NEAR BAY</option>
+                    <option value="island">ISLAND</option>
+                </select>
 
             </form>
 
