add prediction show area

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,6 +93,9 @@
 
             </form>
 
+            <div class="pred_val">
+                <p>The predicted house value is </p>
+            </div>
         </div>
     </div>
 </body>
