glowing outer box

--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,8 @@
                     <label for="proximity">Enter proximity to ocean</label>
                     <select name="proximity" id="" required>
                         <option value="less_than_1_hour">
-                            <1H OCEAN</option>
+                            <1H OCEAN
+                        </option>
                         <option value="inland">INLAND</option>
                         <option value="near_ocean">NEAR OCEAN</option>
                         <option value="near_bay">NEAR BAY</option>
