--- a/static/style.css
+++ b/static/style.css
@@ -34,6 +34,7 @@ body {
     border-radius: 10px;
     transform: translateY(-100px);
     font-size: 22px;
+    box-shadow: 0px 10px 30px 10px rgb(117, 153, 224);
 }
 
 .main_form {
