change ui style and structure

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,19 +55,20 @@
                 <div class="number_inputs">
                     <div class="number_each">
                         <label for="population">Enter average population of the area</label>
-                        <input type="number" name="" id="" required placeholder="Population..." min="0">
+                        <input type="number" name="" id="" class="number_inp" required placeholder="Population..." min="0">
                     </div>
                     <br><br>
 
                     <div class="number_each">
                         <label for="households">Enter average number of households of the area</label>
-                        <input type="number" name="" id="" required placeholder="Households..." min="0">
+                        <input type="number" name="" id="" class="number_inp" required placeholder="Households..." min="0">
                     </div>
                     <br><br>
+                    
 
                     <div class="number_each">
                         <label for="income">Enter your income</label>
-                        <input type="number" name="" id="" required placeholder="Income..." min="0">
+                        <input type="number" name="" id="" class="number_inp" required placeholder="Income..." min="0">
                     </div>
                 </div>
 
