--- a/static/style.css
+++ b/static/style.css
@@ -74,10 +74,11 @@ label {
     padding: 5px;
     border-radius: 10px;
     border: solid rgb(7, 120, 220) 2px;
+    font-size: 20px;
 }
 
-.bumber_inputs input:hover {
-    background-color: rgb(151, 206, 255);
+.number_inputs input:hover {
+    background-color: rgb(188, 223, 253);
 }
 
 .submit_but input {
@@ -132,4 +133,8 @@ select:hover {
 .pred_val p {
     font-size: 30px;
 
+}
+
+.number_inp {
+    padding: 20px;
 }
