--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="mother">
         <div class="main_form_div">
-            <form action="" method="post" class="main_form">
+            <form action="" method="POST" action="{{ url_for('index')}}" class="main_form">
 
                 <div class="range_inputs">
                     <div class="range_inputs_inner">
@@ -25,7 +25,7 @@
 
                         <div class="inner_range">
                             <p>-150.00</p>
-                            <input type="range" name="longitude" id="" min="-150.00" max="-100.00" required>
+                            <input type="range" name="longitude" id="" min="-150.00" max="-100.00" step="0.1" required>
                             <p>-100.00</p>
                         </div>
                         <br>
@@ -33,7 +33,7 @@
                         <label for="latitude">Enter your latitude</label>
                         <div class="inner_range">
                             <p>30.00</p>
-                            <input type="range" name="latitude" id="" required min="30" max="50">
+                            <input type="range" name="latitude" id="" required min="30" max="50" step="0.1">
                             <p>50.00</p>
                         </div>
                         <br>
@@ -55,19 +55,19 @@
                 <div class="number_inputs">
                     <div class="number_each">
                         <label for="population">Enter average population of the area</label>
-                        <input type="number" name="" id="" required placeholder="Population..." min="0">
+                        <input type="number" name="population" id="" placeholder="Population..." min="0" required>
                     </div>
                     <br><br>
 
                     <div class="number_each">
                         <label for="households">Enter average number of households of the area</label>
-                        <input type="number" name="" id="" required placeholder="Households..." min="0">
+                        <input type="number" name="households" id="" required placeholder="Households..." min="0">
                     </div>
                     <br><br>
 
                     <div class="number_each">
                         <label for="income">Enter your income</label>
-                        <input type="number" name="" id="" required placeholder="Income..." min="0">
+                        <input type="number" name="income" id="" required placeholder="Income..." min="0">
                     </div>
                 </div>
 
