--- a/templates/greet.html
+++ b/templates/greet.html
@@ -16,5 +16,6 @@
     <h3> Households: {{ households }}</h3>
     <h3> Income: {{ income }}</h3>
     <h3> Ocean Proximity: {{ proximity }}</h3>
+    <h3> Predicted Price: {{ predictions }}</h3>
 </body>
 </html>
