--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
                 <div class="range_inputs">
                     <div class="range_inputs_inner">
-                        <label for="longitude">Enter your longitude</label>
+                        <label for="longitude">Enter your longitude {{ longitude }} </label>
 
                         <div class="inner_range">
                             <p>-150.00</p>
@@ -30,7 +30,7 @@
                         </div>
                         <br>
 
-                        <label for="latitude">Enter your latitude</label>
+                        <label for="latitude">Enter your latitude {{ latitude }}</label>
                         <div class="inner_range">
                             <p>30.00</p>
                             <input type="range" name="latitude" id="" required min="30" max="50" step="0.1">
@@ -38,7 +38,7 @@
                         </div>
                         <br>
 
-                        <label for="age">Enter your house age</label>
+                        <label for="age">Enter your house age {{ age }}</label>
 
                         <div class="inner_range">
                             <p class="age_limit_left">0</p>
@@ -81,10 +81,10 @@
                         <option value="less_than_1_hour">
                             <1H OCEAN
                         </option>
-                        <option value="inland">INLAND</option>
-                        <option value="near_ocean">NEAR OCEAN</option>
-                        <option value="near_bay">NEAR BAY</option>
-                        <option value="island">ISLAND</option>
+                        <option value="INLAND">INLAND</option>
+                        <option value="NEAR OCEAN">NEAR OCEAN</option>
+                        <option value="NEAR BAY">NEAR BAY</option>
+                        <option value="ISLAND">ISLAND</option>
                     </select>
                 </div>
 
@@ -96,7 +96,7 @@
             </form>
 
             <div class="pred_val">
-                <p>The predicted house value is </p>
+                <p>The predicted house value is $ {{ predictions }} </p>
             </div>
         </div>
     </div>
