--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
                 <div class="range_inputs">
                     <div class="range_inputs_inner">
-                        <label for="longitude">Enter your longitude {{ longitude }} </label>
+                        <label for="longitude">Enter your longitude:  {{ longitude }} </label>
 
                         <div class="inner_range">
                             <p>-150.00</p>
@@ -30,7 +30,7 @@
                         </div>
                         <br>
 
-                        <label for="latitude">Enter your latitude {{ latitude }}</label>
+                        <label for="latitude">Enter your latitude:  {{ latitude }}</label>
                         <div class="inner_range">
                             <p>30.00</p>
                             <input type="range" name="latitude" id="" required min="30" max="50" step="0.1">
@@ -78,7 +78,7 @@
                 <div class="ocean_prox">
                     <label for="proximity">Enter proximity to ocean</label>
                     <select name="proximity" id="" required>
-                        <option value="less_than_1_hour">
+                        <option value="<1H OCEAN">
                             <1H OCEAN
                         </option>
                         <option value="INLAND">INLAND</option>
