final deployment using gunicorn

--- a/templates/index.html
+++ b/templates/index.html
@@ -90,6 +90,7 @@
 
                 <br>
                 <div class="submit_but">
+                    <input type="reset" value="Reset">
                     <input type="submit" value="Predict">
                 </div>
 
